updated with run instructions