@@ -3,16 +3,17 @@ EECS2311 Software Development Project (Winter 2020)
 
 Current Release: Midterm
 
-Important Folders:
+## Run Instructions
+``` java --module-path "../assets/javafx-sdk-13.0.2/lib" --add-modules javafx.controls,javafx.fxml -jar RunnableFile.jar ```
+
+## Important Folders
 
 Documentation: Contains all Documents
 
 VennFX: Contains the entire Application
 
+### Group Members
 Reuben Ninan 216315509
-
 Edward Nwogwugwu 215163520
-
 Wenxuan Li 216374324
-
 Eric Kwok 216397150
